[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/dogicapixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/BaseButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/MainMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
outline_size = 4
outline_color = Color( 0.188235, 0.376471, 0.509804, 1 )
extra_spacing_top = 2
extra_spacing_bottom = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
outline_color = Color( 0.188235, 0.376471, 0.509804, 1 )
extra_spacing_top = 8
extra_spacing_bottom = 8
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 172.0

[node name="TextWrap" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 304.0
margin_bottom = 73.0

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TextWrap"]
margin_right = 304.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "When Cosmic Horrors Attack!"
align = 1
autowrap = true

[node name="AuthorLabel" type="Label" parent="MarginContainer/VBoxContainer/TextWrap"]
margin_top = 51.0
margin_right = 304.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "by Dual Wield Entertainment"
align = 1
autowrap = true

[node name="ButtonsWrap" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 92.0
margin_top = 77.0
margin_right = 212.0
margin_bottom = 161.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4

[node name="PlayButton" parent="MarginContainer/VBoxContainer/ButtonsWrap" instance=ExtResource( 3 )]
margin_right = 120.0
margin_bottom = 18.0
text = "Play"

[node name="SettingsButton" parent="MarginContainer/VBoxContainer/ButtonsWrap" instance=ExtResource( 3 )]
margin_top = 22.0
margin_right = 120.0
margin_bottom = 40.0
text = "Settings"

[node name="CreditsButton" parent="MarginContainer/VBoxContainer/ButtonsWrap" instance=ExtResource( 3 )]
margin_top = 44.0
margin_right = 120.0
margin_bottom = 62.0
text = "Credits"

[node name="QuitButton" parent="MarginContainer/VBoxContainer/ButtonsWrap" instance=ExtResource( 3 )]
margin_top = 66.0
margin_right = 120.0
margin_bottom = 84.0
text = "Quit"
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsWrap/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsWrap/QuitButton" to="." method="_on_QuitButton_pressed"]
